- Added scroll to table - Added loading to nav bar - Fixed rendering for page, StateHasChanged was being called too much

--- a/WayfinderProject/Components/Common/Table.razor.css
+++ b/WayfinderProject/Components/Common/Table.razor.css
@@ -1,5 +1,7 @@
 .pagination {
     place-content: center;
+    width: 100%;
+    overflow-x: auto;
 }
 
 .button-text-color {
